GITForce/src/objects/DynamicPicklist__c.object
<CustomObject>
    <fields>
        <fullName>Backlogs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backlogs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Backlogs__c</fullName>
        <label>No.of Backlogs</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PicklistValue__c</fullName>
        <label>PicklistValue</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DynamicPicklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PicklistValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DynamicPicklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>